--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,3 +15,8 @@ data_transformation:
   root_dir: artifacts/data_transformation
   data_path: artifacts/data_ingestion/samsum_dataset
   tokenizer_name: google-t5/t5-small
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  data_path: artifacts/data_transformation
+  model_ckpt: google-t5/t5-small
