--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,3 +20,7 @@ model_trainer:
   root_dir: artifacts/model_trainer
   data_path: artifacts/data_transformation
   model_ckpt: google-t5/t5-small
+
+prediction:
+  model_path: artifacts/model_trainer/t5_samsum_model
+  tokenizer_path: artifacts/model_trainer/t5_samsum_model
